[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Arina Khokhlova <khokhlova.arina.v@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nyanyapushkina/python-project-49"
classifiers = [
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Private :: Do Not Upload",
]

packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
